fix: all problems
