# app/Http/Resources/TaskResource.php
@@ -22,7 +22,8 @@ class TaskResource extends JsonResource
             'title' => $this->title,
             'details' => $this->details,
             'all_day' => $this->all_day,
-            'start_date' => $this->start_date,
+            'start' => $this->start_date,
+            'end' => $this->end_date,
             'completed' => $this->completed,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
